# a-share-swing-quant

./: .dockerignore  .env.example  .gitattributes  .gitignore  .impeccable.md  Dockerfile  PROJECT_PLAN.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  main.py
apps/web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  server.mjs  tsconfig.json  vite.config.ts
deploy/: .env.example  akshare-universe.csv  deploy.sh  requirements-runtime.txt
deploy/systemd/: a-share-quant-backup.service  a-share-quant-backup.timer  a-share-quant-eod.service  a-share-quant-eod.timer  a-share-quant-restore-verify.service  a-share-quant-restore-verify.timer
docs/: ACCEPTANCE.md  ARCHITECTURE.md  DATA_BUNDLE.md  DEPLOYMENT.md  REQUIREMENTS.md  RUNBOOK.md
scripts/: _common.ps1  backup.ps1  dev.ps1  eod.ps1  restore-verify.ps1  sqlite_tools.py  test.ps1
src/quant_system/: __init__.py  backtest.py  backup.py  backup_verify.py  bundle_cli.py  cli.py  engine.py  models.py  notifications.py  pit.py  portfolio_policy.py  providers.py  quality.py  repository.py  research.py  research_service.py  service.py
tests/: QA_REPORT.md
tests/backend/: test_api.py  test_backtest.py  test_backtest_exit_integration.py  test_engine.py  test_holding_buffer.py  test_notifications.py  test_public_observation.py  test_quality.py  test_repository.py  test_simulation_matching.py
tests/data/: test_akshare_market_enrichment.py  test_akshare_provider_v2.py  test_pit.py  test_provider_config.py  (+2 more)
(+18 files in other folders)
