[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a-share-swing-quant"
version = "0.1.0"
description = "Explainable A-share medium-term model portfolio"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.8,<3",
  "uvicorn>=0.30,<1",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]
providers = ["akshare>=1.14", "tushare>=1.4"]

[project.scripts]
quant-eod = "quant_system.cli:main"
quant-build-bundle = "quant_system.bundle_cli:build_main"
quant-validate-bundle = "quant_system.bundle_cli:validate_main"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_system"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
pythonpath = ["src", "."]
addopts = "-q"
